--- a/index.html
+++ b/index.html
@@ -238,22 +238,26 @@
             <h2>Internships</h2>
             <div class="feature-cards">
                 <div class="feature-card">
-                    <h4>SQL Intern</h4>
-                    <div class="company-info">Celebal Technology <span class="duration">(Jun '24 – Aug '24,
-                            Remote)</span></div>
-                    <ul>
-                        <li>Improved SQL and database management skills through weekly projects.</li>
-                        <li>Gained practical experience in SQL queries, data handling, and optimization.</li>
-                    </ul>
+                    <a href="docs/internship/Celebal.jpg" style="text-decoration: none;" target="_blank">
+                        <h4>SQL Intern</h4>
+                        <div class="company-info">Celebal Technology <span class="duration">(Jun '24 – Aug '24,
+                                Remote)</span></div>
+                        <ul>
+                            <li>Improved SQL and database management skills through weekly projects.</li>
+                            <li>Gained practical experience in SQL queries, data handling, and optimization.</li>
+                        </ul>
+                    </a>
                 </div>
                 <div class="feature-card">
                     <h4>Web Development Intern</h4>
-                    <div class="company-info">Nucleon <span class="duration">(Jun '23 – Jul '23, IIT Jammu)</span></div>
-                    <ul>
-                        <li>Completed a Web Development internship with real-world projects and hands-on training.</li>
-                        <li>Earned multiple freeCodeCamp certifications in web technologies.</li>
-                        <li>Strengthened skills in front-end and back-end development.</li>
-                    </ul>
+                    <a href="docs/internship/IIT-Jammu.jpg" style="text-decoration: none;" target="_blank">
+                        <div class="company-info">Nucleon <span class="duration">(Jun '23 – Jul '23, IIT Jammu)</span></div>
+                        <ul>
+                            <li>Completed a Web Development internship with real-world projects and hands-on training.</li>
+                            <li>Earned multiple freeCodeCamp certifications in web technologies.</li>
+                            <li>Strengthened skills in front-end and back-end development.</li>
+                        </ul>
+                    </a>
                 </div>
             </div>
         </section>
