--- a/projects/health-companion.html
+++ b/projects/health-companion.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rakshit | Projects</title>
+    <title>Health Companion | Rakshit Gupta</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="icon" type="image/png" href="../assets/icon.png">
@@ -16,8 +16,8 @@
             <span class="nav-logo">Rakshit Gupta</span>
             <ul class="nav-links">
                 <li><a href="../index.html">About</a></li>
-                <li><a href="projects.html" class="active">Projects</a></li>
-                <li><a href="resume.html">Resume</a></li>
+                <li><a href="../pages/projects.html" class="active">Projects</a></li>
+                <li><a href="../pages/resume.html">Resume</a></li>
                 <li>
                     <button class="social-dropdown-btn" tabindex="0">
                         Social
@@ -48,55 +48,53 @@
         </div>
     </nav>
     <main class="container">
-        <section class="projects" id="projects">
-            <h2>My Projects</h2>
-            <div class="projects-grid">
-                <a class="project-card" href="../projects/agewell-portal.html">
-                    <h3>👴 AgeWell - A Smart Portal for Senior Citizen Support</h3>
-                    <p>AgeWell is a comprehensive web-based platform designed to empower elderly individuals by
-                        providing an intuitive interface for managing their social, financial, and health-related needs.
-                    </p>
-                </a>
-                <a class="project-card" href="../projects/smart-parking.html">
-                    <h3>🚗 Smart IoT-Based Parking Management System</h3>
-                    <p>Smart IoT Parking System using ESP32-CAM, real-time ANPR, servo control, and a web interface.</p>
-                </a>
-                <a class="project-card" href="../projects/bus-route-management.html">
-                    <h3>🚌 Bus Route Management System Using A* Algorithm</h3>
-                    <p>Bus Route Management System using A* algorithm, Flask, MongoDB, and Leaflet.js for map-based
-                        bookings and dynamic pricing.</p>
-                </a>
-                <a class="project-card" href="../projects/health-companion.html">
-                    <h3>🏥 Health Companion</h3>
-                    <p>User-friendly web app using ML to predict health conditions and provide insights. Built with
-                        Flask, MySQL, and ML models.</p>
-                </a>
-                <a class="project-card" href="../projects/smart-farming.html">
-                    <h3>🌾 AI-Powered Smart Farming Assistance Portal</h3>
-                    <p>Holistic AI/ML solution empowering small farmers with crop recommendations, soil analysis,
-                        disease detection, market insights, and AI chatbot assistance.</p>
-                </a>
-                <a class="project-card" href="../projects/zinnger-restaurant.html">
-                    <h3>🍽️ Zinnger - Restaurant Landing Page</h3>
-                    <p>Developed a responsive and user-friendly "Zinnger - Restaurant Landing Page". Features include a
-                        dynamic menu, table booking, and admin portal, showcasing proficiency in HTML, CSS, JavaScript,
-                        PHP, and MySQL.</p>
-                </a>
-                <a class="project-card" href="../projects/text-to-speech.html">
-                    <h3>🎤 Text to Speech Configurator</h3>
-                    <p>Python GUI application using Tkinter and pyttsx3 for customizable text-to-speech conversion with
-                        volume control, rate adjustment, and voice selection.</p>
-                </a>                
-                <a class="project-card" href="../projects/test-platform-linux.html">
-                    <h3>💻 Test Platform using Linux</h3>
-                    <p>Login-based Online Test Platform using Linux shell scripting, pattern-matching, and file
-                        handling. Randomized questions and timed tests.</p>
-                </a>
-                <a class="project-card" href="../projects/crypto-rpa.html">
-                    <h3>🤖 RPA Project - Daily Cryptocurrency Reports</h3>
-                    <p>Automated RPA bot using UiPath for daily cryptocurrency data scraping, Excel report generation,
-                        and email distribution to subscribed users.</p>
-                </a>
+        <section class="project-detail" style="max-width:900px; margin:0 auto;">
+            <h2 style="font-size:2.5rem; margin-bottom:18px;">🏥 Health Companion</h2>
+            <a href="https://github.com/Rakshitgupta9/Health-Companion" target="_blank" rel="noopener"
+                class="download-btn" style="margin-bottom: 28px; display: inline-block; font-size: 1.1rem;">View on
+                GitHub <i class="fab fa-github"></i></a>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin-bottom:10px;">📋 Introduction</h3>
+            <p style="font-size:1.18rem; line-height:1.7;">Health Companion is a web application designed to help users
+                monitor and predict their risk for certain health conditions using machine learning algorithms. The
+                application is user-friendly and provides detailed information and insights based on user input.</p>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">✨ Features</h3>
+            <div class="feature-cards">
+                <div class="feature-card">
+                    <h4>🔮 Disease Prediction</h4>
+                    <ul>
+                        <li>Predicts the risk of stroke, cardiovascular diseases, and diabetes.</li>
+                    </ul>
+                </div>
+                <div class="feature-card">
+                    <h4>⚖️ BMI Calculator</h4>
+                    <ul>
+                        <li>Calculates Body Mass Index (BMI) based on height and weight.</li>
+                    </ul>
+                </div>
+                <div class="feature-card">
+                    <h4>🔥 Calorie Calculator</h4>
+                    <ul>
+                        <li>Estimates daily calorie needs based on various factors.</li>
+                    </ul>
+                </div>
+                <div class="feature-card">
+                    <h4>🔐 User Authentication</h4>
+                    <ul>
+                        <li>Secure login and registration for personalized experience.</li>
+                    </ul>
+                </div>
+            </div>
+            <h3 style="color:#7ec4ff; font-size:1.5rem; margin:32px 0 10px 0;">💻 Technologies Used</h3>
+            <div class="tech-slider">
+                <div class="tech-track">
+                    <div class="tech-card">HTML</div>
+                    <div class="tech-card">CSS</div>
+                    <div class="tech-card">JavaScript</div>
+                    <div class="tech-card">Python</div>
+                    <div class="tech-card">Flask</div>
+                    <div class="tech-card">MySQL</div>
+                    <div class="tech-card">Machine Learning Models</div>
+                </div>
             </div>
         </section>
     </main>
@@ -122,7 +120,7 @@
 
     <!-- Floating Action Button -->
     <div class="fab">
-        <a href="#projects" class="fab-button">
+        <a href="#top" class="fab-button">
             <i class="fas fa-arrow-up"></i>
         </a>
     </div>
@@ -169,7 +167,7 @@
         }, observerOptions);
 
         // Observe elements for animation
-        document.querySelectorAll('.project-card').forEach(el => {
+        document.querySelectorAll('.feature-card').forEach(el => {
             el.style.opacity = '0';
             el.style.transform = 'translateY(30px)';
             el.style.transition = 'opacity 0.6s ease, transform 0.6s ease';
